<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="3dp"
    android:paddingBottom="5dp"
    android:orientation="vertical" >
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:background="@drawable/layout_border"
    	android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal" >
        <ImageView 
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:id="@+id/iv_avatar"
        android:src="@drawable/yoo_head"/>
    <TextView
        android:layout_weight="1"
        android:id="@+id/tv_newTitle"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="18sp"
        android:singleLine="true"
        android:scrollbars="horizontal"
        android:textColor="@color/dark_nongshu"
        android:text="@string/top_blogs"/>
    </LinearLayout>
   <TextView
        android:layout_weight="5"
        android:textSize="15sp"
        android:paddingLeft="5dp"
        android:maxLines="3"
        android:fontFamily="楷体"
        android:id="@+id/tv_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_hese"
        android:text="@string/detailContent"/>
   
     <TextView 
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/time_icon"
            android:textColor="@color/qingZi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_updated"
            android:text="@string/publishTime"/>
	  <LinearLayout 
	    android:paddingLeft="7sp"
	    android:paddingRight="7sp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:layout_marginBottom="3dp"
        android:orientation="horizontal">
        <TextView 
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tv_views"
            android:gravity="center"
            android:drawableStart="@drawable/scan"
            android:drawableLeft="@drawable/scan"
            android:text="@string/scan"/>
        <TextView 
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tv_comments"
            android:gravity="center"
            android:drawableStart="@drawable/comment"
            android:drawableLeft="@drawable/comment"
            android:text="@string/comment"/>
        <TextView 
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tv_diggs"
            android:gravity="center"
            android:drawableStart="@drawable/favor"
            android:drawableLeft="@drawable/favor"
            android:text="@string/favor"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
