<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eee"
    android:orientation="vertical" >

    <LinearLayout
        android:background="@color/top_themeColor"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/id_ll_chat"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center" >

            <TextView
                android:id="@+id/tv_top_news"
                android:drawableLeft="@drawable/top1"
                android:drawableStart="@drawable/top1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="17sp"
                android:text="@string/recomment_blogs"
                android:textColor="#008000" />
        </LinearLayout>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center" >

            <TextView
                android:id="@+id/tv_home_blogs"
                android:drawableStart="@drawable/top6"
                android:drawableLeft="@drawable/top6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="#000000"
                android:text="@string/home_blogs" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/id_iv_tabline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/top_news"
        android:background="@drawable/tabline" />
</LinearLayout>